force-app/main/default/objects/custom_create286__c/custom_create286__c.object-meta.xml
<CustomObject>
    <label>Custom created object286</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects286</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>