force-app/main/default/objects/custom_create286__c/fields/custom_create_286field583__c.field-meta.xml
<CustomField>
    <fullName>custom_create_286field583__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 286field583</label>
    <type>Checkbox</type>
</CustomField>